--- a/ProjectMVC/Controller/CategorysTableViewCell.xib
+++ b/ProjectMVC/Controller/CategorysTableViewCell.xib
@@ -2,6 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15509"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -9,20 +10,16 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="178" id="KGk-i7-Jjw" customClass="CategorysTableViewCell" customModule="ProjectMVC" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="CategorysTableViewCell" customModule="ProjectMVC" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="178"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                 <rect key="frame" x="0.0" y="0.0" width="320" height="178"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="2Ia-h0-yXZ">
-                        <rect key="frame" x="0.0" y="30.5" width="320" height="147.5"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="147.5" id="58f-9f-gMR"/>
-                            <constraint firstAttribute="width" constant="320" id="B3d-XS-EFa"/>
-                        </constraints>
+                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="2Ia-h0-yXZ">
+                        <rect key="frame" x="0.0" y="25.5" width="320" height="152.5"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="tgd-Yo-78k">
                             <size key="itemSize" width="50" height="50"/>
                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
@@ -36,18 +33,22 @@
                             <constraint firstAttribute="height" constant="20.5" id="yQt-5n-hor"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <nil key="textColor"/>
+                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
+                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 <constraints>
-                    <constraint firstItem="2Ia-h0-yXZ" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="7eS-gM-fnd"/>
+                    <constraint firstItem="2Ia-h0-yXZ" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="5ju-qq-FbN"/>
                     <constraint firstAttribute="trailing" secondItem="7xb-BH-sxC" secondAttribute="trailing" constant="10" id="HFG-9b-g5K"/>
-                    <constraint firstItem="2Ia-h0-yXZ" firstAttribute="top" secondItem="7xb-BH-sxC" secondAttribute="bottom" constant="5" id="a8v-Cf-004"/>
+                    <constraint firstAttribute="bottom" secondItem="2Ia-h0-yXZ" secondAttribute="bottom" id="N8R-Kg-p5R"/>
+                    <constraint firstAttribute="trailing" secondItem="2Ia-h0-yXZ" secondAttribute="trailing" id="RFB-U8-G7E"/>
+                    <constraint firstItem="2Ia-h0-yXZ" firstAttribute="top" secondItem="7xb-BH-sxC" secondAttribute="bottom" id="a8v-Cf-004"/>
                     <constraint firstItem="7xb-BH-sxC" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="e8s-at-xql"/>
                     <constraint firstItem="7xb-BH-sxC" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="t9A-zh-ZGB"/>
                 </constraints>
             </tableViewCellContentView>
+            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
                 <outlet property="categoryTitle" destination="7xb-BH-sxC" id="mK1-cK-GG7"/>
