--- a/ProjectMVC/Controller/GategoryCollectionViewCell.xib
+++ b/ProjectMVC/Controller/GategoryCollectionViewCell.xib
@@ -2,6 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15509"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -27,7 +28,7 @@
                                 </constraints>
                             </imageView>
                         </subviews>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="G1n-qi-hY5" firstAttribute="centerX" secondItem="gz4-Ai-3h6" secondAttribute="centerX" id="V07-w5-mRX"/>
                             <constraint firstItem="G1n-qi-hY5" firstAttribute="centerY" secondItem="gz4-Ai-3h6" secondAttribute="centerY" id="o61-vn-T1C"/>
@@ -35,6 +36,7 @@
                     </view>
                 </subviews>
             </view>
+            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
                 <constraint firstItem="gz4-Ai-3h6" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="Z51-mq-Enc"/>
                 <constraint firstAttribute="trailing" secondItem="gz4-Ai-3h6" secondAttribute="trailing" id="tl8-Yd-4uO"/>
