--- a/ProjectMVC/Controller/ProgramDataCollectionViewCell.xib
+++ b/ProjectMVC/Controller/ProgramDataCollectionViewCell.xib
@@ -2,6 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15509"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -27,7 +28,7 @@
                                 </constraints>
                             </imageView>
                         </subviews>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="9wH-J2-LdL" firstAttribute="centerY" secondItem="oy0-A3-leC" secondAttribute="centerY" id="0En-ok-5JG"/>
                             <constraint firstItem="9wH-J2-LdL" firstAttribute="centerX" secondItem="oy0-A3-leC" secondAttribute="centerX" id="1aJ-uh-u2c"/>
@@ -35,6 +36,7 @@
                     </view>
                 </subviews>
             </view>
+            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
                 <constraint firstItem="oy0-A3-leC" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="GkM-4b-DCP"/>
                 <constraint firstAttribute="bottom" secondItem="oy0-A3-leC" secondAttribute="bottom" id="T2I-Ls-jB7"/>
